tests/errors/func_01.py
from lpython import i32

def f(i: i32):
    print(i)

def g(i: i32):
    print(i + 1)

def f(i: i32):
    print(i + 2)
